[gd_scene load_steps=15 format=3 uid="uid://6f51xk42nxsm"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_wtv2t"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="2_bi3r5"]
[ext_resource type="Script" path="res://scripts/item_slot.gd" id="3_qnija"]
[ext_resource type="Script" path="res://scripts/tooltip.gd" id="4_6kthd"]
[ext_resource type="Script" path="res://scripts/item_follow.gd" id="6_kj5ed"]
[ext_resource type="Texture2D" uid="uid://clhp4wabvkxgh" path="res://ui/soul_black.png" id="6_sbjri"]
[ext_resource type="Texture2D" uid="uid://dcrlqlqwu13jv" path="res://ui/soul_white.png" id="7_n367u"]
[ext_resource type="Texture2D" uid="uid://bqflgg111trky" path="res://ui/duck_icon.png" id="8_1stc1"]
[ext_resource type="Script" path="res://scenes/ui/map_icon.gd" id="9_jksr5"]
[ext_resource type="Texture2D" uid="uid://dbet18b3odofx" path="res://ui/map_icon.png" id="10_lgpdy"]
[ext_resource type="AudioStream" uid="uid://knto1fh4opug" path="res://audio/menu_button_hover.mp3" id="11_p2usx"]
[ext_resource type="AudioStream" uid="uid://b3koymqe0c6dn" path="res://audio/error-126627.mp3" id="12_wsjf1"]
[ext_resource type="AudioStream" uid="uid://b35gyo78k1gaa" path="res://audio/ui-bubble-243465.mp3" id="13_j0drr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yh2ev"]
size = Vector2(50, 50)

[node name="GameUI" type="CanvasLayer" groups=["game_ui"]]
script = ExtResource("1_wtv2t")

[node name="Inventory" type="MarginContainer" parent="." groups=["inventory"]]
z_index = 10
custom_minimum_size = Vector2(1200, 150)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_right = 602.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_constants/margin_top = 50
script = ExtResource("2_bi3r5")

[node name="Background" type="ColorRect" parent="Inventory"]
layout_mode = 2
color = Color(0.101961, 0.113725, 0.109804, 0.784314)

[node name="ScrollContainer" type="ScrollContainer" parent="Inventory"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ItemsSlots" type="HBoxContainer" parent="Inventory/ScrollContainer"]
layout_mode = 2

[node name="ItemSlot1" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot1"]
layout_mode = 2
color = Color(0.485845, 0.46489, 0.462109, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot2" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot2"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot3" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot3"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot4" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot4"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot4"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot5" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot5"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot5"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot6" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot6"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot6"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot7" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot7"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot7"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot8" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot8"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot8"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot9" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot9"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot9"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot10" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot10"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot10"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot11" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot11"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot11"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot12" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot12"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot12"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot13" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot13"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot13"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot14" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot14"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot14"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="ItemSlot15" type="MarginContainer" parent="Inventory/ScrollContainer/ItemsSlots"]
layout_direction = 2
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_qnija")

[node name="ColorRect" type="ColorRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot15"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 1)

[node name="Item" type="TextureRect" parent="Inventory/ScrollContainer/ItemsSlots/ItemSlot15"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 4

[node name="Tooltip" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(100, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -100.0
offset_right = 104.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 29
text = "Press E to talk"
script = ExtResource("4_6kthd")

[node name="ItemFollow" type="Sprite2D" parent="." groups=["item_follow"]]
z_index = 11
script = ExtResource("6_kj5ed")

[node name="Area2D" type="Area2D" parent="ItemFollow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemFollow/Area2D"]
shape = SubResource("RectangleShape2D_yh2ev")

[node name="Timer" type="Timer" parent="ItemFollow"]
wait_time = 0.1
one_shot = true

[node name="DemonSouls" type="MarginContainer" parent="."]
offset_right = 265.0
offset_bottom = 123.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="DemonSouls"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 0.588235)

[node name="HBoxContainer" type="HBoxContainer" parent="DemonSouls"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DemonSouls/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="DemonSouls/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("6_sbjri")
expand_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="DemonSouls/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="DemonSouls/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "1234"
vertical_alignment = 1

[node name="AngelSouls" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -304.0
offset_bottom = 130.0
grow_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="AngelSouls"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 0.588235)

[node name="HBoxContainer" type="HBoxContainer" parent="AngelSouls"]
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="AngelSouls/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="AngelSouls/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "1234
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="AngelSouls/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="AngelSouls/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("7_n367u")
expand_mode = 4

[node name="Ducks" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50

[node name="ColorRect" type="ColorRect" parent="Ducks"]
layout_mode = 2
color = Color(0.486275, 0.466667, 0.462745, 0.588235)

[node name="HBoxContainer" type="HBoxContainer" parent="Ducks"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Ducks/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DuckNr" type="Label" parent="Ducks/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(143, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "12"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Ducks/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DuckIcon" type="TextureRect" parent="Ducks/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("8_1stc1")
expand_mode = 3

[node name="MapIcon" type="MarginContainer" parent="."]
offset_right = 166.438
offset_bottom = 150.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150

[node name="MapIcon" type="TextureRect" parent="MapIcon"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("10_lgpdy")
expand_mode = 3
script = ExtResource("9_jksr5")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_p2usx")

[node name="ErrorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_wsjf1")
volume_db = 10.0

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_j0drr")

[connection signal="input_event" from="ItemFollow/Area2D" to="ItemFollow" method="_on_area_2d_input_event"]
[connection signal="timeout" from="ItemFollow/Timer" to="ItemFollow" method="_on_timer_timeout"]
